# TennisProject

./: .dockerignore  .env.example  .gitignore  .md  AGENTS.md  Dockerfile.backend  LICENSE  LLM_call_test.py  Makefile  README.md  SPEC.md  app.py  app.sh  app2.py  ball_detector.py  bounce_detector.py  config.py  court_detection_net.py  docker-compose.dev.yml  docker-compose.yml  homography.py  main.py  main.sh  next.config.ts  package-lock.json  package.json  person_detector.py  requirements.txt  start_vllm.sh  tennis_prompt.txt  作品說明書.md  競賽文件.md  系統提案.md  附件1-1_系統概述文件.txt
backend/: Dockerfile  analyze.md  app.py  auth.py  config.py  database.py  pyproject.toml  requirements.txt  schemas.py  sql_models.py  tennis_prompt.txt
backend/models/: .gitignore  ball_dataset.sh  ball_dataset_tracknet_to_yolo.py  ball_detections.pkl  ball_train.sh  court_dataset.sh  download.sh
backend/old_project/src/: pose3d_visualizer.py
backend/old_project/src_llm_old/: index.html  tools_ball.py  tools_score.py
backend/routers/: analyze_router.py  chat_router.py  lifespan.py  session_router.py  user_router.py  utils.py  video_router.py
backend/services/: __init__.py  utils.py
backend/services/analyze/: aggregate.py  analysis.py  analyze_video_with_yolo.py  ball.py  buffer.py  constants.py  court.py  draw.py  main.py  player.py  video_io.py  vlm_verify.py
backend/services/chat/: __init__.py  llm.py  prompt.py
backend/services/pipeline/: court_line_detector.py  main.py
backend/test/: test_court.py
backend/test/balltest/: report.py  schema.py  (+4 more)
backend/utils/: session_utils.py
(+201 files in other folders)
